# PicoPass

./: .gitignore  CHANGELOG.md  LICENSE  MANIFESTO.md  README.md  RELEASE.md  SECURITY.md  tauri_help.txt
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.svelte  app.css
app/src-tauri/: Cargo.toml  gen_icon.py  tauri.conf.json
app/src-tauri/src/: license.rs  main.rs  serial.rs  vault.rs
app/src/lib/components/: AddPasswordModal.svelte  Dashboard.svelte  LicenseManager.svelte  Settings.svelte  UnlockScreen.svelte
app/src/lib/stores/: vault.ts
docs/: API_DOCS.md  DEVELOPER_GUIDE.md  FLASHING_GUIDE.md  HARDWARE_SETUP.md  USER_GUIDE.md
firmware/: DOCKER_README.md  Dockerfile  build.py  build_docker.ps1  build_docker.sh
firmware/c/: CMakeLists.txt  main.c  usb_descriptors.c
firmware/c/include/: button.h  config.h  crypto.h  flash_storage.h  led.h  mbedtls_config.h  picopass.h  serial.h  tusb_config.h  usb_hid.h
firmware/c/src/: button.c  crypto.c  flash_storage.c  led.c  main.c  picopass.c  serial.c  usb_hid.c
firmware/c_modules/picopass/: micropython.mk  picopass.c
firmware/hybrid/: main.py
firmware/hybrid/modules/: fast_crypto.c  micropython.mk
firmware/micropython/: ble_hid.py  boot.py  button_handler.py  crypto.py  device.py  display_manager.py  hid_keyboard.py  keyboard.py  led_controller.py  license.py  main.py  rp2350_test.py  serial_protocol.py  serial_test.py  storage.py  test_hid.py
firmware/micropython/lib/: ssd1306.py
firmware/releases/: pico_Pass_pico2-1.uf2
hardware/profiles/: boards.json
tests/: crypto_test.rs
tools/: deploy.py  setup_env.sh  test_crypto.py  test_firmware_license.py  test_license.py  test_serial.py
