[package]
name = "picopass"
version = "0.1.0"
description = "PicoPass Desktop App"
authors = ["Zequinha"]
edition = "2021"

[build-dependencies]
tauri-build = "1.5"

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5" # For key derivation
uuid = { version = "1.0", features = ["v4"] }
serialport = "4.3.0"
csv = "1.3.0"
zeroize = { version = "1.7", features = ["derive"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# dose not exist in Dev mode
custom-protocol = ["tauri/custom-protocol"]
